--- a/3.workspace/workspaceReview/.recommenders/caches/identified-project-coordinates.json
+++ b/3.workspace/workspaceReview/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Program Files\\Java\\jre1.8.0_301","type":"JRE","hints":{}},"jre:jre:1.8.0"],[{"location":"C:\\IT\\1.programming\\10.Spring\\SpringStudy\\3.workspace\\workspaceReview\\SpringWebMvcProject","type":"PROJECT","hints":{"PROJECT_NAME":"SpringWebMvcProject"}},"com.spring:mvc:1.0.0"]]
